# parser_math_expression_C

./: CMakeLists.txt  README.md  main.c
include/: expression_number.h  expression_token.h  list.h  parser.h  queue.h  stack.h
src/: expression_number.c  expression_token.c  list.c  parser.c  queue.c  stack.c
